@@ -67,7 +67,6 @@ class Test3(VMOptimizationBase):
         :return: The distribution.
         :rtype: dict
         """
-
         # Dict of utilizations (Key: hostname, Value: utilization)
         utilizations = {}
 
@@ -112,7 +111,6 @@ class Test3(VMOptimizationBase):
         :return: The utilizations.
         :rtype: dict
         """
-
         utilizations = {}
 
         for hostname, value in metrics.items():
@@ -144,7 +142,6 @@ class Test3(VMOptimizationBase):
         :return: The VMs on each machine.
         :rtype: dict
         """
-
         # Create a dict of list of VMs (Key: hostname, Value: list of VMs)
         distribution = {}
 
