@@ -3,7 +3,7 @@
 
 from datetime import datetime
 
-from pydantic import BaseModel, Field, Json
+from pydantic import BaseModel, Field
 
 
 class Metric(BaseModel):
